<resources>
    <string name="app_name">Androoster</string>
    <string name="app_name_pro">Androoster Pro</string>
    <string name="app_name_pro_version">Pro Version</string>
    <string name="app_name_normal_version">Normal Version</string>
    <string name="app_name_suffix_pro">pro</string>
    <string name="app_name_official">Official</string>
    <string name="app_name_beta">Beta</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="reboot_to_take_effect">Reboot required to apply this tweak</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="widget_loading">Loading...</string>
    <string name="notification_channel_boot">Boot notification</string>
    <string name="action_ok">OK</string>
    <string name="action_start">START</string>
    <string name="action_confirm">CONFIRM</string>
    <string name="action_continue">CONTINUE</string>
    <string name="action_set">SET</string>
    <string name="action_use">USE</string>
    <string name="action_later">LATER</string>
    <string name="action_wipe">WIPE</string>
    <string name="action_exit">EXIT</string>
    <string name="action_open">OPEN</string>
    <string name="action_shutdown">SHUTDOWN</string>
    <string name="action_open_store">OPEN STORE</string>
    <string name="action_install">INSTALL</string>
    <string name="action_enter">ENTER</string>
    <string name="action_grant">GRANT</string>
    <string name="action_open_settings">SETTINGS</string>
    <string name="action_edit">EDIT</string>
    <string name="action_copied">Text copied</string>
    <string name="state_enabled">Enabled</string>
    <string name="state_disabled">Disabled</string>
    <string name="may_not_work">May not work on every device</string>
    <string name="activity_title_cpu">CPU</string>
    <string name="activity_title_ram">RAM</string>
    <string name="activity_title_battery">Battery</string>
    <string name="activity_title_kernel">Kernel</string>
    <string name="activity_title_network">Internet</string>
    <string name="activity_title_storage">Storage</string>
    <string name="activity_title_hardware">Hardware</string>
    <string name="activity_title_graphic">Graphic</string>
    <string name="activity_title_debug">Debug</string>
    <string name="activity_title_gps">GPS</string>
    <string name="title_activity_general">General Tweaks</string>
    <string name="title_activity_uibackup">Backups</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_open_drawer">Open Drawer</string>
    <string name="action_reboot">Reboot</string>
    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_cpu">CPU</string>
    <string name="drawer_ram">RAM</string>
    <string name="drawer_battery">Battery</string>
    <string name="drawer_kernel">Kernel</string>
    <string name="drawer_tweaks">General Tweaks</string>
    <string name="drawer_storage">Storage</string>
    <string name="drawer_net">Internet</string>
    <string name="drawer_debug">Debug</string>
    <string name="drawer_gps">GPS</string>
    <string name="drawer_hardware">Hardware</string>
    <string name="drawer_graphics">Graphics</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_pro">Pro Version</string>
    <string name="drawer_backup">Backups</string>
    <string name="drawer_about">About</string>
    <string name="no_mail_app_found">No mail app found. Please install one from play store</string>
    <string name="cannot_use_figerprint">Cannot authenticate with fingerprint</string>
    <string name="fingerprint_scanning_error">Make sure your finger covers the entire scanner</string>
    <string name="fingerprint_error_permission">Access to fingerprint reader denied</string>
    <string name="fingerprint_no_fingers">No fingerprints registered</string>
    <string name="fingerprint_too_many_attempts">Too many authentication attempts</string>
    <string name="not_found">Not found</string>
    <string name="pirate_apps_title">Pirate apps installed</string>
    <string name="pirate_apps_content">You won\'t be able to make a purchase until you will remove apps such as Freedom, Lucky Patcher and others market cracks</string>
    <string name="pirate_apps_content_restore">You wont\' be able to make restore your purchases until you will remove apps such as Freedom, Lucky Patcher and others market cracks</string>
    <string name="debug_error_title">Debug build installed</string>
    <string name="debug_error_content">You are not allowed to perform testing on this build.</string>
    <string name="debug_error_content_purchase">You are not allowed to perform purchases on this build. If you want you can install a signed version from the Google Play Store</string>
    <string name="packagename_error_title">Packagename mismatch</string>
    <string name="packagename_error_content">You modified Androoster\'s packagename and you cannot run custom builds.</string>
    <string name="packagename_error_shutdown">SHUTDOWN</string>
    <string name="root_error_title">Root access error</string>
    <string name="root_error_content">Androoster need root access to work.\nMake sure to have granted root permissions to Androoster if you have them, this app won\'t work instead</string>
    <string name="root_error_toast">Cannot get root access, please restart Androoster if you are root</string>
    <string name="busybox_error_title">Busybox is not installed</string>
    <string name="busybox_error_content">Cannot access to busybox, Androoster needs some special applets to work.\nPlease install it from the Play Store and reopen Androoster</string>
    <string name="error_activity_settings_not_found">Settings page not found</string>
    <string name="webview_unavailable">This device does not support web view, which is necessary to view the change log. It is missing a system component.</string>
    <string name="edit_dialog_title">Edit property</string>
    <string name="edit_dialog_target_property">Target</string>
    <string name="edit_dialog_default_value">Default value</string>
    <string name="edit_dialog_warning">Warning</string>
    <string name="edit_dialog_new_value">New value</string>
    <string name="dialog_pin">PIN</string>
    <string name="dialog_password">Password</string>
    <string name="dialog_confirm_pin_hint">PIN confirmation</string>
    <string name="dialog_confirm_password_hint">Password confirmation</string>
    <string name="dialog_hint">Hint (Optional)</string>
    <string name="dialog_reboot_title">Reboot</string>
    <string name="dialog_reboot">Reboot</string>
    <string name="dialog_recovery">Recovery</string>
    <string name="dialog_bootloader">Bootloader</string>
    <string name="dialog_fast">Fast reboot</string>
    <string name="dashboard_update_title_not_found">You\'re up to date!</string>
    <string name="dashboard_update_content_not_found">The latest Androoster version (%s) is already installed</string>
    <string name="dashboard_update_title_checking">Version</string>
    <string name="dashboard_update_content_checking">Package: %s\nBuild code: %b\nFlavor: %k</string>
    <string name="dashboard_update_button_ignore">IGNORE</string>
    <string name="dashboard_update_button_playstore">PLAY STORE</string>
    <string name="dashboard_boost">Boost device</string>
    <string name="dashboard_boost_button">BOOST</string>
    <string name="dashboard_boost_content">Kill background processes and clean up memory</string>
    <string name="dashboard_boosting">Boosting...</string>
    <string name="dashboard_boosting_content">Boost in progress...</string>
    <string name="dashboard_boosting_snack_killing">Killing background services...</string>
    <string name="dashboard_boosting_snack_sync">Syncing data on disk...</string>
    <string name="dashboard_boosting_snack_done">Done!</string>
    <string name="dashboard_boost_done_title">Boost done</string>
    <string name="dashboard_boost_done_content">We just killed some processes and we synced filesystem changes on disk</string>
    <string name="dashboard_widget_software_title">Software</string>
    <string name="dashboard_widget_software_android_version">Android version</string>
    <string name="dashboard_widget_software_root_installed">Installed</string>
    <string name="graphic_anim_transition">Transition animation</string>
    <string name="graphic_anim_window">Window animation</string>
    <string name="graphic_anim_animator">Animator animation</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="rate_on_play_store_summary">If you like Androoster let a good review</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="app_details">App Details</string>
    <string name="app_details_summary">Jump in the Settings app\'s page</string>
    <string name="primary_color">Primary Color</string>
    <string name="accent_color">Accent Color</string>
    <string name="pref_press_back_title">Press back twice to exit</string>
    <string name="pref_button_position_title">Button position</string>
    <string name="pref_animations_title">Enable Animations</string>
    <string name="pref_drawer_sticky_settings_title">Drawer sticky settings</string>
    <string name="pref_drawer_sticky_settings_content">Showa persistent settings item</string>
    <string name="pref_open_drawer_fab">Show open drawer button</string>
    <string name="pref_title_set_default_start_page">Start page</string>
    <string name="settings_lock_title">Lock Androoster</string>
    <string name="settings_password_edit">Edit password</string>
    <string name="settings_hint_add">Add a hint</string>
    <string name="dialog_disabled_content">No authentication needed to unlock Androoster</string>
    <string name="pref_fingerprint_title">Login using Fingerprint</string>
    <string name="pref_fingerprint_content_on">Fingerprint will be used as primary login method</string>
    <string name="pref_fingerprint_content_off">Fingerprint authentication disabled</string>
    <string name="pref_show_hint_title">Show the password hint</string>
    <string name="pref_show_hint_content">After 3 wrong login attempts</string>
    <string name="pref_mask_password">Mask passwords</string>
    <string name="pref_hide_boot_notification">Hide boot notification</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_primary_description">The application main color</string>
    <string name="pref_accent_description">An accent color for the theme</string>
    <string name="pref_tint_toasts_title">Tint toasts</string>
    <string name="pref_tint_toasts_content_on">Show colored toasts</string>
    <string name="pref_tint_toasts_content_off">Toast color will always be the same</string>
    <string name="pref_dynamic_toasts_title">Change color basing on content</string>
    <string name="pref_dynamic_toasts_content_on">Theme toast basing on their content</string>
    <string name="pref_dynamic_toasts_content_off">Toast color will always be the accent color</string>
    <string name="pref_tint_navigation_title">Colored navigation bar</string>
    <string name="pref_tint_navigation_content">Using the primary color</string>
    <string name="pref_built_themes">Built-in themes</string>
    <string name="pref_animation_orientation_from_title">Animation orientation</string>
    <string name="pref_animation_speed_title">Animation speed</string>
    <string name="action_settings_toolbar">Show settings in toolbar</string>
    <string name="action_settings_toolbar_summary">On Androoster\'s dashboard</string>
    <string name="settings_general">General</string>
    <string name="settings_animations">Animations</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_menu">Menu</string>
    <string name="settings_security">Security</string>
</resources>