<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/settings_animations">


    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
        android:defaultValue="true"
        android:key="enable_animations"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_animations_title" />

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
        android:defaultValue="2"
        android:dependency="enable_animations"
        android:key="animation_orientation"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:entries="@array/pref_anim_orientation"
        android:entryValues="@array/pref_anim_orientation_values"
        android:title="@string/pref_animation_orientation_from_title" />


    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
        android:dependency="enable_animations"
        android:key="animation_speed"
        android:defaultValue="1"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:entries="@array/pref_anim_speed"
        android:entryValues="@array/pref_anim_speed_values"
        android:title="@string/pref_animation_speed_title" />


    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
