<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="?cardBackgroundColor"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:text="@string/quick_actions"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?tertiaryTextColour" />

        <LinearLayout
            android:id="@+id/rateOnGooglePlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rectSelector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/md_listitem_height"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:focusable="true">

            <com.andreacioccarelli.androoster.service.IconImageView
                android:id="@+id/icon_bug_report"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/about_rate"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:textColor="?primaryTextColour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_on_play_store"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:textColor="?tertiaryTextColour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_on_play_store_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/appDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/rectSelector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/md_listitem_height"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:focusable="true">

            <com.andreacioccarelli.androoster.service.IconImageView
                android:id="@+id/icon_donate"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/about_settings"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:textColor="?primaryTextColour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:textColor="?tertiaryTextColour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_details_summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>